src/test/contracts/negative/interpreter_tests/test_decompile.mligo
module Test = Test.Next

let test =
  let x = Test.Michelson.eval 4n in
  (Test.Michelson.decompile x : string)
